--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jasmine",
     "start": "node server.js"
   },
   "repository": {
@@ -25,5 +25,11 @@
     "cors": "^2.8.4",
     "express": "^4.15.3",
     "nodemon": "^1.11.0"
+  },
+  "devDependencies": {
+    "jasmine": "^2.6.0",
+    "jasmine-supertest": "^1.0.0",
+    "request": "^2.81.0",
+    "supertest": "^3.0.0"
   }
 }
