--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "jasmine": "^2.6.0",
     "jasmine-supertest": "^1.0.0",
+    "node-env-file": "^0.1.8",
     "request": "^2.81.0",
     "supertest": "^3.0.0"
   }
