--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "body-parser": "^1.17.2",
     "cors": "^2.8.4",
     "express": "^4.15.3",
+    "fs": "^0.0.1-security",
+    "node-stream-zip": "^1.3.7",
     "request": "^2.81.0",
+    "sqlite3": "^3.1.8",
     "yarn": "^0.27.5"
   },
   "devDependencies": {
