--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "body-parser": "^1.17.2",
     "cors": "^2.8.4",
     "express": "^4.15.3",
+    "express-ws": "^3.0.0",
     "fs": "^0.0.1-security",
     "node-stream-zip": "^1.3.7",
     "request": "^2.81.0",
