--- a/package.json
+++ b/package.json
@@ -24,12 +24,11 @@
     "body-parser": "^1.17.2",
     "cors": "^2.8.4",
     "express": "^4.15.3",
-    "express-ws": "^3.0.0",
     "fs": "^0.0.1-security",
     "node-stream-zip": "^1.3.7",
     "request": "^2.81.0",
+    "socket.io": "^2.0.3",
     "sqlite3": "^3.1.8",
-    "ws": "^3.1.0",
     "yarn": "^0.27.5"
   },
   "devDependencies": {
